	- Add option "Camera Switch: Incl. Missiles" to switch to and follow a missile fired by the active vessel until it explodes or misses (requested from FJRT, requires CameraTools v1.27.0 for optimal behaviour).
	- Add whitelist option for guns/rockets/lasers to report hits in the competition marquee.
	- Fix manual aim assist UI placement.
- AI / WM:
	- AI will start evading missiles once the missile engine activates instead of waiting for 1 second after launch.
	- When avoiding terrain and roll is inverted by more than 30°, reverse the roll target so that terrain avoidance is done while fully inverted and enable Aiming steer mode for more yaw control.
	- Remove the 'premature dive fix', which causes weird flight behaviour when flying inverted.
- Armor / Materials:
	- Steel Hull Material melting point increased.
- Countermeasures:
	- Add selection priority to countermeasures to allow staggering of dropping countermeasures — higher priority CM dispensers trigger first.
- Weapons:
	- Weapon burst length/fire angle overrides now respect symmetry.
	- Fix heatseeker missiles fired from relaodable rails occasionally losing lock on firing.
	- Fix NRE spam when trying to fire Modular Missiles.
	- Fix NRE when firing Modular Missiles and Missile Icons are enabled.
	- Modular Missiles will use RCS when fired in space.
	- Heatseekers now target the hottest part on a craft, not the CoM.
- Competition:
	- Add toggle for setting maxAltitude and GM Kill limits to ASL or AGL.
	- Add Kill timer for GM Altitude to give violators a chance to get back to safe altitude instead of immediate kill.
	- Add customisable fields for the intra-team separation conditions when starting competitions (default: 800m + 100m per member) (FJRT request).
	- Add a per-round PVP score parser.
- RWP:
	- Fix issue causing the web API to not report scores.

v1.5.8.0
IMPROVEMENTS / FIXES
- General:
	- Fix Firebottle mass not resetting if a part switched from fueltank to structural.
- UI: